# experiments

./: 3_layers_lstm_neural_network.py  Phantom-WebServer.pl  README.md
Glade/: PerlManager.glade
Phantom/: Phantom.html  Projet PHANTOM - arduino car.odt  ajax.js  index.html~  joystick.js  style.css  test.html
R scripts/: .RData  .Rhistory  code_challenger.r  r_ex.R  r_logic_base.R  r_question.R  scriptR_coca.R
UnlockByQRcode/: .project  AndroidManifest.xml
WordReference_applet/: .project  WRSearcher  WordReference.glade  callback.c  fonction.c
breakout/: Makefile  README.md
c++/: Com  Makefile  psql  psql.cpp
dbusHal/: Makefile  dbusHal  dbusHal2  dbusHal2.c  err.txt
dbus_Hal/: README.md  dbusHal.c
hellousb_int/: Makefile  hellousb_int  hellousb_int.c  serial  serial.c  tmp  tmp.sh  toto
perl/: :q  Selene.pl  banque.pl  curses.pl  debit.pl  fonction.pl  freetranslation.pl  hachage.pl  listeFTP.pl  log  log.txt  logconnexion  logger.pl  page.html  passgen.pl  scanner_reseau.pl  tags  test.html  test.pl  test.txt  test2.txt  test_time.pl  traduction.txt  twitter-register.pl
python_/: actions.py  control.py  livedemmo.py
realtime_chatbox/: README.md  index.coffee  index.js  index.js.map  package.json
ruby/: script.rb
sdl-Rpg/: .cdtproject  .project  Makefile
sdl-Rpg_/: .project  Makefile
sdl-editeur_carte/data/: Makefile.am  Makefile.in
sdl-editeur_carte/data/map/: 01.map  save.map
sdl-editeur_carte/include/: Makefile.am  Makefile.in  main.h  map.h  type.h
sdl-editeur_carte/src/: Makefile.am  Makefile.in  main.c  map.c  type.c
(+360 files in other folders)
