## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

rpg2d_editeur_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@

rpg2d_editeur_data_DATA = \
	map/save.map\
	tiles/mchip0.bmp\
	musique/Battle1.mid\
	musique/Field1.mid\
	musique/Opening1.mid\
	musique/boss_battle.mid\
	musique/title.mid

EXTRA_DIST = $(rpg2d_editeur_data_DATA)
