## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

rpg2d_editeur_includedir = $(pkgincludedir)

rpg2d_editeur_include_DATA = \
	main.h\
	map.h\
	type.h

EXTRA_DIST = $(rpg2d_editeur_include_DATA)
