## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	 -I/usr/include

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = rpg2d_editeur

rpg2d_editeur_SOURCES = \
	main.c\
	map.c\
	type.c

rpg2d_editeur_LDFLAGS = \
	 -L/usr/lib

rpg2d_editeur_LDADD = \
	 -lSDL -lSDL_ttf -lfmod

